tests/baselines/reference/tsxDefaultAttributesResolution3(strict=true).errors.txt
error TS2318: Cannot find global type 'CallableFunction'.
error TS2318: Cannot find global type 'NewableFunction'.
file.tsx(13,19): error TS2322: Type 'true' is not assignable to type 'false'.


!!! error TS2318: Cannot find global type 'CallableFunction'.
!!! error TS2318: Cannot find global type 'NewableFunction'.
==== file.tsx (1 errors) ====
    import React = require('react');
    
    interface Prop {
        x: false;
    }
    class Poisoned extends React.Component<Prop, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    // Error
    let p = <Poisoned x/>;
                      ~
!!! error TS2322: Type 'true' is not assignable to type 'false'.
!!! related TS6500 file.tsx:4:5: The expected type comes from property 'x' which is declared here on type 'IntrinsicAttributes & IntrinsicClassAttributes<Poisoned> & Prop & { children?: ReactNode | undefined; }'